# picture-api

./: .gitignore  .gitpod.yml  Dockerfile  README.md  main.py  picture_frame.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
