[tool.poetry]
name = "soupbowl-picture-api"
version = "0.1.0"
description = "Responds with a random image from a directory."
authors = ["soup-bowl <code@soupbowl.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
